--- a/pi.html
+++ b/pi.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Password Input Example</title>
 </head>
+  <link rel="stylesheet" href="styles.css">
 <body>
   <h2>Login Form</h2>
   <form action="/submit" method="post">
