--- a/pi.html
+++ b/pi.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Password Input Example</title>
-</head>
   <link rel="stylesheet" href="styles.css">
+</head>
 <body>
   <h2>Login Form</h2>
   <form action="/submit" method="post">
@@ -14,7 +14,11 @@
     <label for="password">Password:</label><br>
     <input type="password" id="password" name="password" required><br><br>
 
+    <button type="button" id="togglePassword" onclick="togglePassword()">Show Password</button><br><br>
+
     <input type="submit" value="Login">
   </form>
+
+  <script src="script.js"></script>
 </body>
 </html>
